--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
 <body>
     <header>
     <nav>
-    <div>
       <a href="#" class="brand link">HelloBooks</a>
       <ul>
         <li><a href="html/admindashboard.html" class="link">Admin</a></li>
         <li><a href="" class="link">About Us</a></li>
         <li><a href="" class="link">Contact Us</a></li>
-        <li><a href="" class="link">SIGNUP</a></li>
+        <li><a href="html/signup.html" class="link">SignUp</a></li>
       </ul>
-    </div>
   </nav>
     </header>
     <!-- Welcome Message -->
