--- a/html/forgotpassword.html
+++ b/html/forgotpassword.html
@@ -42,7 +42,7 @@
             </label><br>
             <button>Reset Password</button>
         </form>
-        <div>sign in <a href="index.html" class="link">here</a></div>
+        <div>sign in <a href="html/index.html" class="link">here</a></div>
     </div>
 </body>
 </html>
