--- a/html/mydashboard.html
+++ b/html/mydashboard.html
@@ -17,7 +17,7 @@
         <li><a href="aboutus.html" class="link">About Us</a></li>
         <li><a href="contactus.html" class="link">Contact Us</a></li>
         <li><a href="profile.html" class="link">Emmanuel Ogunbo</a></li>
-        <li><a href="signup.html" class="link">LOGOUT</a></li>
+        <li><a href="../index.html" class="link">LOGOUT</a></li>
       </ul>
     </div>
   </nav>
