--- a/html/profile.html
+++ b/html/profile.html
@@ -23,8 +23,10 @@
   </nav>
     </header>
    <div class="profile-head">
-   <div class="profile">PROFILE</div>
+   <div class="my-profile">PROFILE</div>
+   <div class="borrowed">
    <div class="borrowed-profile">BORROWED BOOKS</div> 
    <div class="history-profile">BOOKS HISTORY</div></div>
+   </div>
 </body>
 </html>
