--- a/html/signup.html
+++ b/html/signup.html
@@ -13,9 +13,9 @@
     <div>
       <a href="#" class="brand link">HelloBooks</a>
       <ul>
-        <li><a href="aboutus.html" class="link">About Us</a></li>
-        <li><a href="contactus.html" class="link">Contact Us</a></li>
-        <li><a href="../index.html" class="link">SIGN IN</a></li>
+        <li><a href="" class="link">About Us</a></li>
+        <li><a href="" class="link">Contact Us</a></li>
+        <li><a href="../index.html" class="link">SignIn</a></li>
       </ul>
     </div>
   </nav>
