--- a/html/signup.html
+++ b/html/signup.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" name="description" content="sign in and sign up page">
 	<meta charset="utf-8" http-equiv="author" content="Emmanuel Ogunbo">
 	<link rel="stylesheet" type="text/css" href="../css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
 	<script type="text/javascript" src=""></script>
 </head>
 <body>
