link added to hellobooks

--- a/html/admindashboard.html
+++ b/html/admindashboard.html
@@ -12,7 +12,7 @@
     <header>
     <nav>
     <div>
-      <a href="#" class="brand link">HelloBooks</a>
+      <a href="../index.html" class="brand link">HelloBooks</a>
       <ul>
         <li><a href="" class="link">About Us</a></li>
         <li><a href="" class="link">Contact Us</a></li>
