link added to hellobooks

--- a/html/mydashboard.html
+++ b/html/mydashboard.html
@@ -12,7 +12,7 @@
     <header>
     <nav>
     <div>
-      <a href="#" class="brand link">HelloBooks</a>
+      <a href="../index.html" class="brand link">HelloBooks</a>
       <ul>
         <li><a href="aboutus.html" class="link">About Us</a></li>
         <li><a href="contactus.html" class="link">Contact Us</a></li>
