--- a/html/signup.html
+++ b/html/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>You learn</title>
+	<title>HelloBooks</title>
 	<meta charset="utf-8" name="description" content="sign in and sign up page">
 	<meta charset="utf-8" http-equiv="author" content="Emmanuel Ogunbo">
 	<link rel="stylesheet" type="text/css" href="../css/styles.css">
@@ -12,7 +12,7 @@
      <header>
     <nav>
     <div>
-      <a href="#" class="brand link">HelloBooks</a>
+      <a href="../index.html" class="brand link">HelloBooks</a>
       <ul>
         <li><a href="" class="link">About Us</a></li>
         <li><a href="" class="link">Contact Us</a></li>
