--- a/html/profile.html
+++ b/html/profile.html
@@ -1,32 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>You learn</title>
+	<title>HelloBooks</title>
 	<meta charset="utf-8" name="description" content="sign in and sign up page">
 	<meta charset="utf-8" http-equiv="author" content="Emmanuel Ogunbo">
-	<link rel="stylesheet" type="text/css" href="../css/dashboard.css">
-    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="../css/profile.css">
+  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 	<script type="text/javascript" src=""></script>
 </head>
 <body>
     <header>
-    <nav>
-    <div>
-      <a href="#" class="brand link">HelloBooks</a>
-      <ul>
-        <li><a href="" class="link">About Us</a></li>
-        <li><a href="" class="link">Contact Us</a></li>
-        <li><a href="" class="link">Emmanuel Ogunbo</a></li>
-        <li><a href="index.html" class="link">LOGOUT</a></li>
+    <nav class="nav-extended nav-color">
+    <div class="nav-wrapper">
+      <a href="../index.html" class="brand-logo">HelloBooks</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="">Help</a></li>
+        <li><a href="">Emmanuel Ogunbo</a></li>
+        <li><a href="../index.html">Logout</a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="">Help</a></li>
+        <li><a href="">Emmanuel Ogunbo</a></li>
+        <li><a href="../index.html">Logout</a></li>
+      </ul>
+    </div>
+    <div class="nav-content">
+      <ul class="tabs tabs-transparent">
+        <li class="tab"><a href="">PROFILE</a></li>
+        <li class="tab"><a class="active" href="">BORROWED BOOKS</a></li>
+        <li class="borrowed-history"><a href="">BORROWED HISTORY</a></li>
       </ul>
     </div>
   </nav>
     </header>
-   <div class="profile-head">
-   <div class="my-profile">PROFILE</div>
-   <div class="borrowed">
-   <div class="borrowed-profile">BORROWED BOOKS</div> 
-   <div class="history-profile">BOOKS HISTORY</div></div>
-   </div>
+
+    <!-- Profile head -->
+
+     <table class="bordered table-width">
+        <thead>
+          <tr>
+              <th class="my-profile">My Profile</th>
+              <th class="my-profile"><button class="edit-button">Edit</button></th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>Full Name</td>
+            <td>Ogunbo Emmanuel</td>
+          </tr>
+          <tr>
+            <td>Username</td>
+            <td>temmyogunbo</td>
+          </tr>
+          <tr>
+            <td>Email</td>
+            <td>yahoo.com</td>
+          </tr>
+        </tbody>
+      </table>
 </body>
 </html>
