update admin to include profile page

--- a/html/admindashboard.html
+++ b/html/admindashboard.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="" class="link">About Us</a></li>
         <li><a href="" class="link">Contact Us</a></li>
-        <li><a href="" class="link">Emmanuel Ogunbo</a></li>
+        <li><a href="profile.html" class="link">Emmanuel Ogunbo</a></li>
         <li><a href="../index.html" class="link">LOGOUT</a></li>
       </ul>
     </div>
