update mydashboard to include profile page

--- a/html/mydashboard.html
+++ b/html/mydashboard.html
@@ -14,8 +14,8 @@
     <div>
       <a href="../index.html" class="brand link">HelloBooks</a>
       <ul>
-        <li><a href="aboutus.html" class="link">About Us</a></li>
-        <li><a href="contactus.html" class="link">Contact Us</a></li>
+        <li><a href="" class="link">About Us</a></li>
+        <li><a href="" class="link">Contact Us</a></li>
         <li><a href="profile.html" class="link">Emmanuel Ogunbo</a></li>
         <li><a href="../index.html" class="link">LOGOUT</a></li>
       </ul>
