--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     			</label>
     			<button class="log-in-button">Log in</button>
     		</form>
-    		<!-- forgotten password -->
+    		<!-- forgot password -->
             <div>
                 <a href="html/forgotpassword.html" class="link">
                 forgotten password?
