--- a/html/signup.html
+++ b/html/signup.html
@@ -38,7 +38,7 @@
     <div class="div-body-sign-up">
     	<div class="div-sign-up">
     	    <p>Create an account:</p>
-    		<form action="admindashboard.html" method="post">
+    		<form action="admindashboard.html" method="get">
                 <label>Username:<br>
                     <input type="text" name="username" placeholder="your username">
                 </label><br>
