--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="div-body">
     	<div class="div-log-in">
     	    <p>Sign In:</p>
-    		<form action="html/mydashboard.html" method="post">
+    		<form action="html/mydashboard.html" method="get">
     			<label>Username<span class="red">*</span><br>
     				<input type="email" name="email" placeholder="your email">
     			</label><br>
