updated sign up page

--- a/html/signup.html
+++ b/html/signup.html
@@ -42,8 +42,11 @@
                 <label>Username:<br>
                     <input type="text" name="username" placeholder="your username">
                 </label><br>
-                <label>Full name:<br>
-                    <input type="text" name="full-name" placeholder="your full name">
+                <label>First name:<br>
+                    <input type="text" name="first-name" placeholder="your first name">
+                </label><br>
+                <label>Last name:<br>
+                    <input type="text" name="last-name" placeholder="your last name">
                 </label><br>
     			<label>Email:<br>
     				<input type="email" name="email" placeholder="your email">
