--- a/public/index.html
+++ b/public/index.html
@@ -1,60 +1,80 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>HelloBooks</title>
-	<meta charset="utf-8" name="description" content="sign in and sign up page">
-	<meta charset="utf-8" http-equiv="author" content="Emmanuel Ogunbo">
-	<link rel="stylesheet" type="text/css" href="./css/styles.css"> 
-    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
-	<script type="text/javascript" src=""></script>
-</head>
-<body>
-    <header>
-    <nav>
-      <a href="#" class="brand link">HelloBooks</a>
-      <ul>
-        <li><a href="html/admindashboard.html" class="link">Admin</a></li>
-        <li><a href="" class="link">About Us</a></li>
-        <li><a href="" class="link">Contact Us</a></li>
-        <li><a href="html/signup.html" class="link">SignUp</a></li>
-      </ul>
-  </nav>
-    </header>
-    <!-- Welcome Message -->
-     <div class="welcome-message">
-        <div>
-         <h2 class="welcome-head">Welcome to HelloBooks</h2>
-         <p class="welcome-head-para"><pre>
-         Your platform to up to date books.
-
-            You can borrow, and read
-
-                   books online.
-        </pre></p>
-        </div>
-     </div>
-       
-    <!-- Log in form-->
-    <div class="div-body">
-    	<div class="div-log-in">
-    	    <p>Sign In:</p>
-    		<form action="html/mydashboard.html" method="get">
-    			<label>Username<span class="red">*</span><br>
-    				<input type="email" name="email" placeholder="your email">
-    			</label><br>
-    			<label>Password<span class="red">*</span><br>
-    				<input type="password" name="password" placeholder="password"><br>
-    			</label>
-    			<button class="log-in-button">Log in</button>
-    		</form>
-    		<!-- forgot password -->
-            <div>
-                <a href="html/forgotpassword.html" class="link">
-                forgotten password?
-            </a>
+     <head>
+        <title>HelloBooks</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="./css/style.css" />
+     </head>
+     <body>
+        <header>
+            <div id="logo-wrap">
+                <a href="index.html" class="link">HelloBooks</a>
             </div>
-        <a href="" class="link"><img src="image/Google-plus-icon.png" alt="google button" height="40" width="40" class="google-plus-icon"></a> 
-    	</div>
-    </div>
-</body>
+            <div id="nav-body">
+                <nav id="nav">
+                  <ul>
+                    <li><a href="html/mydashboard.html" class="link">Admin</a></li>
+                    <li><a href="" class="link">About Us</a></li>
+                    <li><a href="" class="link">Contact Us</a></li>
+                    <li><a href="html/signup.html" class="link">SignUp</a></li>
+                 </ul>
+                </nav>
+            </div>
+        </header>
+        <div id="mobile-menu-head">
+                 <div id="mobile-menu-logo">
+                     <a href="#" class="link">HelloBooks</a>
+                 </div>
+                 <div id="mobile-menu">
+                   <img src="img/menu-icon.png" height="50px" width="50px" />
+                 </div>
+            </div>
+               <script>
+                document.getElementById('mobile-menu').onclick = function(){
+                    if(!document.getElementById('mobile-nav').hasAttribute("toggle")){
+                        document.getElementById('mobile-nav').setAttribute("toggle","toggled");
+                        document.getElementById('mobile-nav').style.display = "block";
+                        document.getElementById('mobile-menu-head').style.backgroundColor ="rgba(0,0,0,0.7)";
+                    }else if(document.getElementById('mobile-nav').hasAttribute("toggle")){
+                        document.getElementById('mobile-nav').style.display = "none";
+                        document.getElementById('mobile-nav').removeAttribute("toggle");
+                        document.getElementById('mobile-menu-head').style.background = "rgba(0,0,0,0)";
+                    };
+                }
+            </script>
+        <div id="mobile-nav">
+                    <li><a href="html/mydashboard.html" class="link">Admin</a></li>
+                    <li><a href="" class="link">About Us</a></li>
+                    <li><a href="" class="link">Contact Us</a></li>
+                    <li><a href="html/signup.html" class="link">SignUp</a></li>
+            </div>
+        <section id="body-content">
+            <div id="left-content">
+                <h2 class="welcome-head">Welcome to HelloBooks</h2>
+                    <p class="welcome-head-para">
+                        Your platform to up to date books.<br>You can borrow, and read<br>books online.
+                    </p>
+            </div>
+            <div id="right-content">
+                <div class="div-log-in">
+    	           <p>Sign In:</p>
+    		         <form action="html/mydashboard.html" method="get">
+                        <label>Username<span class="red">*</span><br>
+                            <input type="email" name="email" placeholder="your email">
+                        </label><br>
+                        <label>Password<span class="red">*</span><br>
+                            <input type="password" name="password" placeholder="password"><br>
+                        </label>
+                        <button class="log-in-button">Log in</button>
+                     </form>
+    		<!-- forgot password -->
+                <br><div>
+                   <a href="html/forgotpassword.html" class="link">forgotten password&nbsp<sup><span class="red">?</span></sup></a>
+               </div><br>
+                <a href="" class="link"><img src="img/Google-Plus-icon.png" alt="google button" height="30px" width="30px" class="google-plus-icon"></a> 
+    	   </div>
+        </div>
+        </section>
+     </body>
 </html>
