--- a/public/html/forgotpassword.html
+++ b/public/html/forgotpassword.html
@@ -1,48 +1,82 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>You learn</title>
-    <meta charset="utf-8" name="description" content="sign in and sign up page">
-    <meta charset="utf-8" http-equiv="author" content="Emmanuel Ogunbo">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <script type="text/javascript" src=""></script>
-</head>
-<body>
-   <header>
-    <nav>
-    <div>
-      <a href="../index.html" class="brand link">HelloBooks</a>
-      <ul>
-        <li><a href="aboutus.html" class="link">About Us</a></li>
-        <li><a href="contactus.html" class="link">Contact Us</a></li>
-        <li><a href="signup.html" class="link">SIGNUP</a></li>
-      </ul>
-    </div>
-  </nav>
-    </header>
-    <!-- Welcome Message -->
-     <div class="welcome-message">
-        <div>
-         <h2 class="welcome-head">Welcome to HelloBooks</h2>
-         <p class="welcome-head-para"><pre>
-         Your platform to up to date books.
-
-            You can borrow, and read
-
-                   books online.
-        </pre></p>
+     <head>
+        <title>HelloBooks</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="../style.css" />
+     </head>
+     <body>
+        <header>
+            <div id="logo-wrap">
+                <a href="#" class="link">HelloBooks</a>
+            </div>
+            <div id="nav-body">
+                <nav id="nav">
+                  <ul>
+                    <li><a href="html/admindashboard.html" class="link">Admin</a></li>
+                    <li><a href="" class="link">About Us</a></li>
+                    <li><a href="" class="link">Contact Us</a></li>
+                    <li><a href="signup.html" class="link">SignUp</a></li>
+                 </ul>
+                </nav>
+            </div>
+        </header>
+        <div id="mobile-menu-head">
+                 <div id="mobile-menu-logo">
+                     <a href="../index.html" class="link">HelloBooks</a>
+                 </div>
+                 <div id="mobile-menu">
+                   <img src="../img/menu-icon.png" height="50px" width="50px" />
+                 </div>
+            </div>
+               <script>
+                document.getElementById('mobile-menu').onclick = function(){
+                    if(!document.getElementById('mobile-nav').hasAttribute("toggle")){
+                        document.getElementById('mobile-nav').setAttribute("toggle","toggled");
+                        
+                        document.getElementById('mobile-nav').style.display = "block";
+                    
+                        document.getElementById('mobile-menu-head').style.backgroundColor ="rgba(0,0,0,0.7)";
+                    }else if(document.getElementById('mobile-nav').hasAttribute("toggle")){
+                        document.getElementById('mobile-nav').style.display = "none";
+                        document.getElementById('mobile-nav').removeAttribute("toggle");
+                        document.getElementById('mobile-menu-head').style.background = "rgba(0,0,0,0)";
+                    };
+                }      
+            </script>
+        <div id="mobile-nav">
+                    <li><a href="html/admindashboard.html" class="link">Admin</a></li>
+                    <li><a href="" class="link">About Us</a></li>
+                    <li><a href="" class="link">Contact Us</a></li>
+                    <li><a href="signup.html" class="link">SignUp</a></li>
+            </div>
+        <section id="body-content">
+            <div id="left-content">
+                <h2 class="welcome-head">Welcome to HelloBooks</h2>
+                    <p class="welcome-head-para">
+                        Your platform to up to date books.<br>You can borrow, and read<br>books online.
+                    </p>
+                    <script>
+                    </script>
+            </div>
+            <div id="right-content">
+                <div class="div-log-in">
+    	           <p class="head-forgot-password">Forgot Password</p>
+    		         <form action="html/mydashboard.html" method="get">
+                        <label>Username<span class="red">*</span><br>
+                            <input type="email" name="email" placeholder="your email">
+                        </label><br>
+                        <button class="log-in-button reset-password">Reset Password</button>
+                     </form>
+    		<!-- forgot password -->
+                <br>
+                <div>
+                   <a href="../index.html" class="link log-in-button sign-in-forgot-password">Sign In</a>
+               </div><br>
+                  </div>
         </div>
-     </div>
-
-    <!-- Reset in form-->
-    <div class="div-password">
-        <form action="" method="post" name="password-reset">
-            <label>Please enter your email address<br>
-                <input type="password" name= "email-password-reset">
-            </label><br>
-            <button>Reset Password</button>
-        </form>
-        <div>sign in <a href="../index.html" class="link">here</a></div>
-    </div>
-</body>
+        </section>
+        <div class="clear"></div>
+     </body>
 </html>
