--- a/public/html/mydashboard.html
+++ b/public/html/mydashboard.html
@@ -1,106 +1,133 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>You learn</title>
-	<meta charset="utf-8" name="description" content="sign in and sign up page">
-	<meta charset="utf-8" http-equiv="author" content="Emmanuel Ogunbo">
-	<link rel="stylesheet" type="text/css" href="../css/dashboard.css">
-    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
-	<script type="text/javascript" src=""></script>
-</head>
-<body>
-    <header>
-    <nav>
-    <div>
-      <a href="../index.html" class="brand link">HelloBooks</a>
-      <ul>
-        <li><a href="" class="link">About Us</a></li>
-        <li><a href="" class="link">Contact Us</a></li>
-        <li><a href="profile.html" class="link">Emmanuel Ogunbo</a></li>
-        <li><a href="../index.html" class="link">LOGOUT</a></li>
-      </ul>
-    </div>
-  </nav>
-    </header>
-    <div class="dashboard">My dashboard</div>
-    <!-- Borrow or Return book -->
-    <div class="borrow-return">
-        <button class="borrow">Borrow a Book</button>
-        <button class="return">Return a Book</button>
-    </div>
-
-    <!-- Categories -->
-    <div class="categories">
-        <div>Categories</div>
-        <div class="list-categories">
-            <div class="programming">
-            <img src="../image/file-icon.jpg" height="40" width="30"><a href="" class="link file-icon">Programming</a>
+    <head>
+        <title> Dashboard | HelloBooks </title>
+        <meta charset="ut-8" name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="../css/dashboard.css" />
+    </head>
+    <body>
+        <header>
+            <div id="dash-welcome">
+                <div>
+                Howdy, Emmanuel <img src="../img/user.png" width="22px;" height="22px" style="background:white; border-radius:40px;"/>
+                </div>
             </div>
-             <div class="mathematics">
-            <img src="../image/file-icon.jpg" height="40" width="30"><a href="" class="link file-icon">Mathematics</a>
+            <div id="all-dash">
+            <div id="logo-wrap">
+                <a href="mydashboard.html" class="link">HelloBooks</a>
             </div>
-             <div class="romance">
-            <img src="../image/file-icon.jpg" height="40" width="30"><a href="" class="link file-icon">Romance</a>
+            <div id="dash-nav">
+                <ul>
+                    <li><a href="profile.html">My Profile</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="../index.html">Log Out</a></li>
+                </ul>
             </div>
-        </div>    
-    </div>
-
-    <!-- View books Available -->
-    <div class="view-book">
-        <div class="inferno-cover1">
-            <img src="../image/inferno-cover.jpg" height="150" width="100">
-            <div class="book">
-            <pre>
-                Title: Inferno
-                Author: Brown D.
-            </pre>
-            <button>View Details</button>
             </div>
+             <div id="dash-mobile-menu-head">
+                 <div id="dash-mobile-menu-logo">
+                     <a href="../index.html" class="link">HelloBooks</a>
+                 </div> 
+                 <div id="dash-mobile-menu">
+                 <img src="../img/menu-icon.png" height="50px" width="50px" />
+                 </div>
+            </div>
+        </header>
+        <script>
+                document.getElementById('dash-mobile-menu').onclick = function(){
+                    if(!document.getElementById('mobile-nav').hasAttribute("toggle")){
+                        document.getElementById('mobile-nav').setAttribute("toggle","toggled");
+                        document.getElementById('mobile-nav').style.display = "block";
+                        document.getElementById('mobile-menu-head').style.backgroundColor ="rgba(0,0,0,0.7)";
+                    }else if(document.getElementById('mobile-nav').hasAttribute("toggle")){
+                        document.getElementById('mobile-nav').style.display = "none";
+                        document.getElementById('mobile-nav').removeAttribute("toggle");
+                        document.getElementById('mobile-menu-head').style.background = "rgba(0,0,0,0)";
+                    };
+                }
+            </script>
+           <div id="mobile-nav">
+               <p>Howdy, Emmanuel  <img src="../img/user.png" width="22px;" height="22px" style="background:white; border-radius:40px;margin-top: 1%;"/></p>
+                    <li><a href="profile.html" class="link">My Profile</a></li>
+                    <li><a href="#" class="link">About Us</a></li>
+                    <li><a href="#" class="link">Contact Us</a></li>
+                    <li><a href="../index.html" class="link">Log Out</a></li>
+            </div>
+            
+        <div id="dash-page-heading">
+            My Dashboard.
         </div>
-
-        <div class="inferno-cover2">
-            <img src="../image/inferno-cover.jpg" height="150" width="100">
-            <div class="book">
-            <pre>
-                Title: Inferno
-                Author: Brown D
-            </pre>
-            <button>View Details</button>
-            </div>
+        <div id="dash-book-action">
+            <button style="background:rgb(150, 203, 37)">Borrow a book</button>
+            <button style="background:darkslateblue;"> Return a book</button>
         </div>
-
-         <div class="inferno-cover3">
-            <img src="../image/inferno-cover.jpg" height="150" width="100">
-            <div class="book">
-            <pre>
-                Title: Inferno
-                Author: Brown D
-            </pre>
-            <button>View Details</button>
+        <section id="dash-main-body">
+            <div id="dash-categories">
+               <p> Categories </p>
+               <div class="categories">
+                    <div class="cat-logo"><img src="../img/file-icon.jpg" alt="logo" width="50px" height="50px" /></div>
+                    <div class="cat-name"><a href="#">Programming</a></div> 
+               </div>
+                <div class="categories">
+                    <div class="cat-logo"><img src="../img/file-icon.jpg" alt="logo" width="50px" height="50px" /></div>
+                    <div class="cat-name"><a href="#">Mathematics</a></div> 
+               </div>
+                <div class="categories">
+                    <div class="cat-logo"><img src="../img/file-icon.jpg" alt="logo" width="50px" height="50px" /></div>
+                    <div class="cat-name"><a href="#">Romance</a></div> 
+               </div>
             </div>
-        </div>
 
-        <div class="inferno-cover4">
-            <img src="../image/inferno-cover.jpg" height="150" width="100">
-            <div class="book">
-            <pre>
-                Title: Inferno
-                Author: Brown D
-            </pre>
-            <button>View Details</button>
-            </div>
-        </div>
+            <div id="dash-book-cover">
+                <div class="book-section">
+                    <div class="book-image">
+                        <img src="../img/Inferno-cover.jpg" />
+                    </div>
+                    <div class="about-book-snip">
+                        <div class="book-title">Title: Inferno</div>
+                        <div class="book-author">Author: Brown D</div>
+                    </div>
+                    <button> View Details </button>
+                </div>
 
-         <div class="inferno-cover5">
-            <img src="../image/inferno-cover.jpg" height="150" width="100">
-            <div class="book">
-            <pre>
-                Title: Inferno
-                Author: Brown D
-            </pre>
-            <button>View Details</button>
+                <div class="book-section">
+                    <div class="book-image">
+                        <img src="../img/Inferno-cover.jpg" />
+                    </div>
+                    <div class="about-book-snip">
+                        <div class="book-title">Title: Inferno</div>
+                        <div class="book-author">Author: Brown D</div>
+                    </div>
+                    <button> View Details </button>
+                </div>
+
+                <div class="book-section">
+                    <div class="book-image">
+                        <img src="../img/Inferno-cover.jpg" />
+                    </div>
+                    <div class="about-book-snip">
+                        <div class="book-title">Title: Inferno</div>
+                        <div class="book-author">Author: Brown D</div>
+                    </div>
+                    <button> View Details </button>
+                </div>
+
+                <div class="book-section">
+                    <div class="book-image">
+                        <img src="../img/Inferno-cover.jpg" />
+                    </div>
+                    <div class="about-book-snip">
+                        <div class="book-title">Title: Inferno</div>
+                        <div class="book-author">Author: Brown D</div>
+                    </div>
+                    <button> View Details </button>
+                </div>
             </div>
-        </div>
-    </div>
-</body>
+        </section>
+        <br><br>  
+        <footer>
+            (c) copyright 2017 HelloBooks
+        </footer>
+    </body>
 </html>
