--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -1,65 +1,97 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>HelloBooks</title>
-	<meta charset="utf-8" name="description" content="sign in and sign up page">
-	<meta charset="utf-8" http-equiv="author" content="Emmanuel Ogunbo">
-	<link rel="stylesheet" type="text/css" href="../css/profile.css">
-  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
-	<script type="text/javascript" src=""></script>
-</head>
-<body>
-    <header>
-    <nav class="nav-extended nav-color">
-    <div class="nav-wrapper">
-      <a href="../index.html" class="brand-logo">HelloBooks</a>
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="">Help</a></li>
-        <li><a href="">Emmanuel Ogunbo</a></li>
-        <li><a href="../index.html">Logout</a></li>
-      </ul>
-      <ul class="side-nav" id="mobile-demo">
-        <li><a href="">Help</a></li>
-        <li><a href="">Emmanuel Ogunbo</a></li>
-        <li><a href="../index.html">Logout</a></li>
-      </ul>
-    </div>
-    <div class="nav-content">
-      <ul class="tabs tabs-transparent">
-        <li class="tab"><a href="">PROFILE</a></li>
-        <li class="tab"><a class="active" href="">BORROWED BOOKS</a></li>
-        <li class="borrowed-history"><a href="">BORROWED HISTORY</a></li>
-      </ul>
-    </div>
-  </nav>
-    </header>
-
-    <!-- Profile head -->
-
-     <table class="bordered table-width">
-        <thead>
-          <tr>
-              <th class="my-profile">My Profile</th>
-              <th class="my-profile"><button class="edit-button">Edit</button></th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr>
-            <td>Full Name</td>
-            <td>Ogunbo Emmanuel</td>
-          </tr>
-          <tr>
-            <td>Username</td>
-            <td>temmyogunbo</td>
-          </tr>
-          <tr>
-            <td>Email</td>
-            <td>yahoo.com</td>
-          </tr>
-        </tbody>
-      </table>
-</body>
+    <head>
+        <title> Profile | HelloBooks </title>
+        <meta charset="ut-8" name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="../css/dashboard.css" />
+        <link rel="stylesheet" type="text/css" href="../css/profile.css" />
+    </head>
+    <body style="min-width: 465px">
+        <header>
+            <div id="dash-welcome">
+                <div>
+                Howdy, Emmanuel <img src="../img/user.png" width="22px;" height="22px" style="background:white; border-radius:40px;"/>
+                </div>
+            </div>
+            <div id="all-dash">
+            <div id="logo-wrap">
+                <a href="mydashboard.html" class="link">HelloBooks</a>
+            </div>
+            <div id="dash-nav">
+                <ul>
+                    <li><a href="mydashboard.html">Dashboard</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="../index.html">Log Out</a></li>
+                </ul>
+            </div>
+            </div>
+             <div id="dash-mobile-menu-head">
+                 <div id="dash-mobile-menu-logo">
+                     <a href="../index.html" class="link">HelloBooks</a>
+                 </div> 
+                 <div id="dash-mobile-menu">
+                 <img src="../img/menu-icon.png" height="50px" width="50px" />
+                 </div>
+            </div>
+        </header>
+        <script>
+                document.getElementById('dash-mobile-menu').onclick = function(){
+                    if(!document.getElementById('mobile-nav').hasAttribute("toggle")){
+                        document.getElementById('mobile-nav').setAttribute("toggle","toggled");
+                        document.getElementById('mobile-nav').style.display = "block";
+                        document.getElementById('mobile-menu-head').style.backgroundColor ="rgba(0,0,0,0.7)";
+                    }else if(document.getElementById('mobile-nav').hasAttribute("toggle")){
+                        document.getElementById('mobile-nav').style.display = "none";
+                        document.getElementById('mobile-nav').removeAttribute("toggle");
+                        document.getElementById('mobile-menu-head').style.background = "rgba(0,0,0,0)";
+                    };
+                }
+            </script>
+           <div id="mobile-nav">
+               <p>Howllo, Emmanuel  <img src="../img/user.png" width="22px;" height="22px" style="background:white; border-radius:40px;margin-top: 1%;"/></p>
+                    <li><a href="mydashboard.html" class="link">Dashboard</a></li>
+                    <li><a href="" class="link">About Us</a></li>
+                    <li><a href="" class="link">Contact Us</a></li>
+                    <li><a href="../index.html" class="link">Log Out</a></li>
+            </div>
+        <div id="dash-page-heading">
+            Profile Page.
+        </div>
+        <div id="dash-book-action">
+            <button style="background:darkslateblue;">Edit Profile</button>
+        </div>
+        <div id="profile-table">
+            <table>
+                <tr>
+                    <td>
+                        Full Name
+                    </td>
+                    <td>
+                        Ogunbo Emmanuel
+                    </td>
+                </tr>
+                    <tr>
+                    <td>
+                        User Name
+                    </td>
+                    <td>
+                        temmyogunbp
+                    </td>
+                </tr>
+                    <tr>
+                    <td>
+                        Email
+                    </td>
+                    <td>
+                        @yahoo.com
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <br><br>  
+        <footer  >
+            (c) copyright 2017 HelloBooks
+        </footer>
+    </body>
 </html>
