--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -49,7 +49,7 @@
                 }
             </script>
            <div id="mobile-nav">
-               <p>Howllo, Emmanuel  <img src="../img/user.png" width="22px;" height="22px" style="background:white; border-radius:40px;margin-top: 1%;"/></p>
+               <p>Howdy, Emmanuel  <img src="../img/user.png" width="22px;" height="22px" style="background:white; border-radius:40px;margin-top: 1%;"/></p>
                     <li><a href="mydashboard.html" class="link">Dashboard</a></li>
                     <li><a href="" class="link">About Us</a></li>
                     <li><a href="" class="link">Contact Us</a></li>
