--- a/client/app/index.html
+++ b/client/app/index.html
@@ -10,20 +10,17 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
-      <link rel ="stylesheet" href="./index.css">
+      <!-- <link rel ="stylesheet" href="./index.css"> -->
       <!-- Compiled and minified CSS -->
-  <!-- <link rel="stylesheet" href="/css/style.css"> -->
-<script src='//cdn.tinymce.com/4/tinymce.min.js'></script>
+<!-- <script src='//cdn.tinymce.com/4/tinymce.min.js'></script> -->
  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 
-	<title>Library App</title>
+	<title>HelloBooks</title>
 </head>
 <body>
 	<div id="app"></div>
 
-	<script type="text/javascript" src="./public/bundle.js"></script>
-  <script>
-    </script>
+	<!-- <script type="text/javascript" src="./public/bundle.js"></script>-->
 </body>
 </html>
