--- a/client/app/public/js/index.html
+++ b/client/app/public/js/index.html
@@ -17,7 +17,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 	<title>HelloBooks</title>
-<link href="../css/style.css" rel="stylesheet"></head>
+<link href="./style.css" rel="stylesheet"></head>
 <body>
 	<div id="app"></div>
 
